force-app/main/default/objects/Announcement__c/fields/Announcement_Status__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Status__c</fullName>
    <formula>IF(
Is_Active__c,
&quot;Published&quot;,
&quot;Archived&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Announcement Status</label>
    <type>Text</type>
</CustomField>