force-app/main/default/objects/Announcement__c/fields/Send_to_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Faculty__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send to Faculty</label>
    <type>Checkbox</type>
</CustomField>