force-app/main/default/objects/Announcement__c/validationRules/Message_should_contain_min_20_characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Message_should_contain_min_20_characters</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Message__c)&lt;20</errorConditionFormula>
    <errorMessage>Announcement Message should contain at least 20 characters.</errorMessage>
</ValidationRule>