force-app/main/default/objects/Announcement__c/validationRules/Posted_Date_cannot_be_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Posted_Date_cannot_be_future</fullName>
    <active>true</active>
    <errorConditionFormula>Posted_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Posted Date cannot be a future date.</errorMessage>
</ValidationRule>