force-app/main/default/objects/Announcement__c/validationRules/Title_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Title_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Title__c)</errorConditionFormula>
    <errorMessage>Announcement Title is required.</errorMessage>
</ValidationRule>